finished frontendqa document app

--- a/QA App/QA_App.ipynb
+++ b/QA App/QA_App.ipynb
@@ -57,22 +57,12 @@
    "execution_count": 3,
    "id": "eab2f337",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading ./files/us_constitution.pdf\n",
-      "{'producer': 'Skia/PDF m115 Google Docs Renderer', 'creator': 'PyPDF', 'creationdate': '', 'title': 'us_constitution', 'source': './files/us_constitution.pdf', 'total_pages': 41, 'page': 10, 'page_label': '11'}\n",
-      "There is 41 pages in your data.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data = load_document('./files/us_constitution.pdf')\n",
-    "print(data[10].metadata)\n",
+    "# data = load_document('./files/us_constitution.pdf')\n",
+    "# print(data[10].metadata)\n",
     "\n",
-    "print(f'There is {len(data)} pages in your data.')"
+    "# print(f'There is {len(data)} pages in your data.')"
    ]
   },
   {
@@ -13645,34 +13635,10 @@
    "execution_count": 5,
    "id": "c8e990a2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generative Pre-trained Transformer 4 (GPT-4) is a multimodal large language model trained and created by OpenAI and the fourth in its series of GPT foundation models. It was launched on March 14, 2023, and made publicly available via the paid chatbot product ChatGPT Plus until being replaced in 2025, via OpenAI's API, and via the free chatbot Microsoft Copilot.  \n",
-      "GPT-4 is more capable than its predecessor GPT-3.5. GPT-4 Vision (GPT-4V) is a version of GPT-4 that can process images in addition to text. OpenAI has not revealed technical details and statistics about GPT-4, such as the precise size of the model.\n",
-      "As a transformer-based model, GPT-4 uses a paradigm where pre-training using both public data and \"data licensed from third-party providers\" is used to predict the next token. After this step, the model was then fine-tuned with reinforcement learning feedback from humans and AI for human alignment and policy compliance.: 2 \n",
-      "\n",
-      "\n",
-      "== Background ==\n",
-      " \n",
-      "\n",
-      "OpenAI introduced the first GPT model (GPT-1) in 2018, publishing a paper called \"Improving Language Understanding by Generative Pre-Training\", which was based on the transformer architecture and trained on a large corpus of books. The next year, they introduced GPT-2, a larger model that could generate coherent text. In 2020, they introduced GPT-3, a model with over 100 times as many parameters as GPT-2, that could perform various tasks with few examples. GPT-3 was further improved into GPT-3.5, which was used to create the chatbot product ChatGPT.\n",
-      "Rumors claim that GPT-4 has 1.76 trillion parameters, which was first estimated by the speed it was running and by George Hotz.\n",
-      "\n",
-      "\n",
-      "== Capabilities ==\n",
-      "OpenAI stated that GPT-4 is \"more reliable, creative, and able to handle much more nuanced instructions than GPT-3.5.\" They produced two versions of GPT-4, with context windows of 8,192 and 32,768 tokens, a significant improvement over GPT-3.5 and GPT-3, which were limited to 4,096 and 2,048 tokens respectively. Some of the capabilities of GPT-4 were predicted by OpenAI before training it, although other capabilities remained hard to predict due to breaks in downstream scaling laws. Unlike its predecessors, GPT-4 is a multimodal model: it can take images as well as text as input; this gives it the ability to describe the humor in unusual images, summarize text from screenshots, and answer exam questions that contain diagrams. It can now interact with users through spoken words and respond to images, allowing for more natural conversations and the ability to provide suggestions or answers based on photo uploads.\n",
-      "To gain further control over GPT-4, OpenAI introduced the \"system message\", a directive in natural language given to GPT-4 in order to specify its tone of voice and task. For example, the system message can instruct the model to \"be a Shakespearean pirate\", in which case it will respond in rhyming, Shakespearean prose, or request it to \"always write the output of [its] response in JSON\", in which case the model will do so, adding keys and values as it sees fit to match the structure of its reply. In the examples provided by OpenAI, GPT-4 refused to deviate from its system message despite requests to do otherwise by the user during the conversation.\n",
-      "When instructed to do so, GPT-4 can interact with external interfaces. For example, the model could be instructed to enclose a query within <search></search> tags to perform a web search, the result of which would be inserted into the model's prompt to allow it to form a response. This allows the model to perform tasks beyond its normal text-prediction capabilities, such as using APIs, generating images, and accessing and summarizing webpages.\n",
-      "A 2023 article in Nature stated programmers have found GPT-4 useful for assisting in coding tasks (despite its propensity for error), such as finding errors in existing code and suggesting optimizations to improve performance. The article quoted a biophysicist who found that the time he required to p\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data = load_from_wikipedia('GPT-4')\n",
-    "print(data[0].page_content)"
+    "# data = load_from_wikipedia('GPT-4')\n",
+    "# print(data[0].page_content)"
    ]
   },
   {
@@ -13714,22 +13680,12 @@
    "execution_count": 8,
    "id": "cc7e2fe3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading ./files/us_constitution.pdf\n",
-      "{'producer': 'Skia/PDF m115 Google Docs Renderer', 'creator': 'PyPDF', 'creationdate': '', 'title': 'us_constitution', 'source': './files/us_constitution.pdf', 'total_pages': 41, 'page': 10, 'page_label': '11'}\n",
-      "There is 41 pages in your data.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data = load_document('./files/us_constitution.pdf')\n",
-    "print(data[10].metadata)\n",
+    "# data = load_document('./files/us_constitution.pdf')\n",
+    "# print(data[10].metadata)\n",
     "\n",
-    "print(f'There is {len(data)} pages in your data.')"
+    "# print(f'There is {len(data)} pages in your data.')"
    ]
   },
   {
@@ -13737,24 +13693,11 @@
    "execution_count": 9,
    "id": "e43d9e47",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "224\n",
-      "Maryland six, V irginia ten, North Carolina five, South Carolina five, and \n",
-      " Georgia three. \n",
-      " When vacancies happen in the Representation from any State, the \n",
-      " Executive Authority thereof shall issue W rits of Election to fill such \n",
-      " V acancies.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "chunks = chunk_data(data)\n",
-    "print(len(chunks))\n",
-    "print(chunks[10].page_content)"
+    "# chunks = chunk_data(data)\n",
+    "# print(len(chunks))\n",
+    "# print(chunks[10].page_content)"
    ]
   },
   {
@@ -13778,18 +13721,9 @@
    "execution_count": 11,
    "id": "aedfe089",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total Tokens: 9842\n",
-      "Embedding Cost in USD: 0.000197\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print_embedding_cost(chunks)"
+    "# print_embedding_cost(chunks)"
    ]
   },
   {
@@ -13870,18 +13804,10 @@
    "execution_count": 14,
    "id": "f6d9ef43",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating index askadocument and embeddings ...Ok\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "index_name = 'askadocument'\n",
-    "vector_store = insert_or_fetch_embeddings(index_name, chunks)"
+    "# index_name = 'askadocument'\n",
+    "# vector_store = insert_or_fetch_embeddings(index_name, chunks)"
    ]
   },
   {
@@ -13911,19 +13837,11 @@
    "execution_count": 16,
    "id": "26760a12",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'query': 'what is the whole document about?', 'result': \"I'm sorry, but without knowing the specific document or its contents, I can't provide a summary of the entire document. If you can provide more details or context, I may be able to help in a more meaningful way.\"}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "q = \"what is the whole document about?\"\n",
-    "answer = ask_and_get_answer(vector_store, q)\n",
-    "print(answer)"
+    "# q = \"what is the whole document about?\"\n",
+    "# answer = ask_and_get_answer(vector_store, q)\n",
+    "# print(answer)"
    ]
   },
   {
@@ -13956,18 +13874,9 @@
    "execution_count": 18,
    "id": "15e81090",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Deleting all indexes ... \n",
-      "Ok\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "delete_pinecone_index()"
+    "# delete_pinecone_index()"
    ]
   },
   {
@@ -13975,20 +13884,12 @@
    "execution_count": 19,
    "id": "332c8d1d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating index chatgpt and embeddings ...Ok\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data = load_from_wikipedia('ChatGPT', 'ro')\n",
-    "chunks = chunk_data(data)\n",
-    "index_name = 'chatgpt'\n",
-    "vector_store = insert_or_fetch_embeddings(index_name, chunks)"
+    "# data = load_from_wikipedia('ChatGPT', 'ro')\n",
+    "# chunks = chunk_data(data)\n",
+    "# index_name = 'chatgpt'\n",
+    "# vector_store = insert_or_fetch_embeddings(index_name, chunks)"
    ]
   },
   {
@@ -13996,19 +13897,11 @@
    "execution_count": 20,
    "id": "7c51f781",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'query': 'cand a fost lansat GPT?', 'result': \"I'm not sure, would you like me to look it up for you?\"}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "q = \"cand a fost lansat GPT?\"\n",
-    "answer = ask_and_get_answer(vector_store, q)\n",
-    "print(answer)"
+    "# q = \"cand a fost lansat GPT?\"\n",
+    "# answer = ask_and_get_answer(vector_store, q)\n",
+    "# print(answer)"
    ]
   },
   {
@@ -14019,7 +13912,8 @@
    "outputs": [],
    "source": [
     "def create_embeddings_chroma(chunks, persistent_directory='./chroma_db'):\n",
-    "    from langchain.vectorstores import Chroma\n",
+    "    from langchain_openai import ChatOpenAI\n",
+    "    from langchain_community.vectorstores import Chroma\n",
     "    from langchain_openai import OpenAIEmbeddings\n",
     "    \n",
     "    embeddings = OpenAIEmbeddings(model='text-embedding-3-small', dimensions=1536)\n",
@@ -14028,12 +13922,44 @@
     "    return vector_store\n",
     "\n",
     "def load_embeddings_chroma(persistent_directory='./chroma_db'):\n",
-    "    from langchain.vectorstores import Chroma\n",
+    "    from langchain_openai import ChatOpenAI\n",
+    "    from langchain_community.vectorstores import Chroma\n",
     "    from langchain_openai import OpenAIEmbeddings\n",
     "    \n",
     "    embeddings = OpenAIEmbeddings(model='text-embedding-3-small', dimensions=1536)\n",
     "    vector_store = Chroma(persist_directory=persistent_directory, embedding_function=embeddings)\n",
     "    return vector_store"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e27de5de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_openai import OpenAIEmbeddings\n",
+    "from langchain_community.vectorstores import Chroma\n",
+    "\n",
+    "def create_embeddings_chroma_batched(chunks, batch_size=10, persistent_directory='./chroma_db'):\n",
+    "    embeddings_model = OpenAIEmbeddings(model='text-embedding-3-small', dimensions=1536)\n",
+    "\n",
+    "    texts = [doc.page_content for doc in chunks]\n",
+    "    metadatas = [doc.metadata for doc in chunks]\n",
+    "    \n",
+    "    all_embeddings = []\n",
+    "    for i in range(0, len(texts), batch_size):\n",
+    "        batch = texts[i:i + batch_size]\n",
+    "        all_embeddings.extend(embeddings_model.embed_documents(batch))\n",
+    "\n",
+    "    # Manually construct documents with embeddings\n",
+    "    vector_store = Chroma.from_texts(\n",
+    "        embedding=embeddings_model,\n",
+    "        texts=texts,\n",
+    "        metadatas=metadatas,\n",
+    "        persist_directory=persistent_directory\n",
+    "    )\n",
+    "    return vector_store\n"
    ]
   },
   {
@@ -14046,14 +13972,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading ./files/rag_powered_by_google_search.pdf\n"
+      "Loading ./files/us_constitution.pdf\n"
      ]
     }
    ],
    "source": [
-    "data = load_document('./files/rag_powered_by_google_search.pdf')\n",
-    "chunks = chunk_data(data, chunk_size=1356)\n",
-    "vector_store = create_embeddings_chroma(chunks)"
+    "data = load_document('./files/us_constitution.pdf')\n",
+    "chunks = chunk_data(data, chunk_size=256)\n",
+    "vector_store = create_embeddings_chroma(chunks)\n",
+    "#vector_store = create_embeddings_chroma_batched(chunks)"
    ]
   },
   {
